--- a/tekton/buildah.PipelineRun.yaml
+++ b/tekton/buildah.PipelineRun.yaml
@@ -8,7 +8,7 @@ spec:
     - name: app-name
       value: express-sample-app
     - name: image-repo
-      value: https://quay.io/repository/kcimesa/express-sample-app
+      value: quay.io/repository/kcimesa/express-sample-app
     - name: source-repo
       value: https://github.com/cloud-native-garage-method-cohort/emea7-katarina-kustomize-trigger
   pipelineRef:
