--- a/tekton/base/build-bot.ServiceAccount.yaml
+++ b/tekton/base/build-bot.ServiceAccount.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: build-bot
-automountServiceAccountToken: false
+#automountServiceAccountToken: false
 secrets: 
   - name: quay-secret
 ---
