--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,6 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  labels:
+    app.openshift.io/runtime: js
   name: express-sample-app
 spec:
   replicas: 1
@@ -20,7 +22,7 @@ spec:
       schedulerName: default-scheduler
       containers:
       - name: express-sample-app
-        image: quay.io/upslopeio/express-sample-app:d90c742ee626048c4d1e2032eb836255e4036561
+        image: quay.io/kcimesa/express-sample-app:3d186919cd1579669d0985fd7ef3377ed50b4052
         ports:
         - name: http
           protocol: TCP
