commit specific ids

--- a/tekton/base/buildah.Pipeline.yaml
+++ b/tekton/base/buildah.Pipeline.yaml
@@ -10,11 +10,17 @@ spec:
     type: string
   - name: image-repo
     type: string
+  - name: sha
+    type: string
+    default: ""
+    description: Precise SHA of the commit to build
   tasks:
   - name: git-clone
     params:
     - name: url
       value: "$(params.source-repo)"
+    - name: revision
+      value: "$(params.sha)"
     taskRef:
       name: git-clone
       kind: ClusterTask
