--- a/tekton/base/webhook-receiver.EventListener.yaml
+++ b/tekton/base/webhook-receiver.EventListener.yaml
@@ -9,3 +9,108 @@ spec:
         name: webhook-receiver
       bindings:
         - ref: webhook-receiver
+---
+apiVersion: triggers.tekton.dev/v1alpha1
+kind: TriggerTemplate
+metadata:
+  name: webhook-receiver
+spec:
+  params:
+      - name: source-repo
+        description: Source code repository
+      - name: sha
+        description: Precise SHA of the commit to build
+  resourcetemplates:
+    - apiVersion: tekton.dev/v1beta1
+      kind: PipelineRun
+      metadata:
+        generateName: buildah-
+      spec:
+        serviceAccountName: build-bot
+        params:
+          - name: app-name
+            value: express-sample-app
+          - name: image-repo
+            value: quay.io/kcimesa/express-sample-app
+          - name: source-repo
+            value: $(tt.params.source-repo)
+          - name: sha
+            value: $(tt.params.sha)
+        pipelineRef:
+          name: buildah
+        workspaces:
+        - name: pipeline-shared-data
+          volumeClaimTemplate:
+            spec:
+              accessModes:
+                - ReadWriteOnce 
+              resources:
+                requests:
+                  storage: 1Gi
+---
+apiVersion: triggers.tekton.dev/v1alpha1
+kind: TriggerBinding
+metadata:
+  name: webhook-receiver
+spec:
+  params:
+    - name: source-repo
+      value: $(body.repository.url)
+    - name: sha
+      value: $(body.head_commit.id)
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: webhook-receiver
+rules:
+  - resources:
+      - eventlisteners
+      - triggerbindings
+      - triggertemplates
+    apiGroups:
+      - triggers.tekton.dev
+    verbs:
+      - get
+  - resources:
+      - pipelineruns
+      - pipelineresources
+    apiGroups:
+      - tekton.dev
+    verbs:
+      - create
+  - resources:
+      - configmaps
+    apiGroups:
+      - ""
+    verbs:
+      - list
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: webhook-receiver
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: RoleBinding
+metadata:
+  name: webhook-receiver
+roleRef:
+  name: webhook-receiver
+  kind: Role
+  apiGroup: rbac.authorization.k8s.io
+subjects:
+  - name: webhook-receiver
+    kind: ServiceAccount
+---
+apiVersion: route.openshift.io/v1
+kind: Route
+metadata:
+  name: webhook-receiver
+spec:
+  port:
+    targetPort: 8080
+  to:
+    name: el-webhook-receiver
+    kind: Service
+    weight: 100
