--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       schedulerName: default-scheduler
       containers:
       - name: express-sample-app
-        image: quay.io/kcimesa/express-sample-app:3d186919cd1579669d0985fd7ef3377ed50b4052
+        image: quay.io/kcimesa/express-sample-app:latest
         ports:
         - name: http
           protocol: TCP
