--- a/k8s/kustomization.yaml
+++ b/k8s/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
 - deployment.yaml
 - service.yaml
 - route.yaml
+- webhook-receiver.EventListener.yaml
 images:
 - name: quay.io/upslopeio/express-sample-app
   newName: quay.io/kcimesa/express-sample-app
