--- a/tekton/base/webhook-receiver.EventListener.yaml
+++ b/tekton/base/webhook-receiver.EventListener.yaml
@@ -47,6 +47,17 @@ spec:
               resources:
                 requests:
                   storage: 1Gi
+        - name: gitops-repository
+          volumeClaimTemplate:
+           spec:
+             resources:
+               requests:
+                 storage: 1Gi
+             accessModes:
+             - ReadWriteOnce
+        - name: git-credentials
+          secret:
+            secretName: git-credentials
 ---
 apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
